--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
                         您的工作只是把我们准备给你的<span class="font-bold text-green-600">【广告】</span>发送给你的朋友或者通过<span class="font-bold text-green-600">【脸书广告】</span>去陌生市场拿名单。<br>
                         <br>我们的<span class="font-bold text-green-600">【助理】</span>会帮你们跟进这些名单直到他出席。只要他们出席并购买你将会得到联盟行销的分红。
                     </p>
-                    <div class="img-hover-zoom">
-                        <img src="https://src-site.vercel.app/4.png" alt="工作流程图片" class="w-full">
+                    <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
+                        <img src="https://src-site.vercel.app/4.png" alt="" class="w-full">
                     </div>
                 </div>
                 <div class="md:w-1/2">
@@ -406,8 +406,8 @@
                 <div class="flex justify-center items-center mb-6">
                     <span class="text-4xl md:text-6xl font-extrabold text-green-600 count-up" data-count="9000">0</span>
                 </div>
-                <div class="img-hover-zoom max-w-2xl mx-auto">
-                    <img src="https://src-site.vercel.app/5.png" alt="收入计算图片" class="mx-auto">
+                <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
+                   <img src="https://src-site.vercel.app/5.png" alt="工作流程图片" class="w-full">
                 </div>
             </div>
         </section>
