--- a/index.html
+++ b/index.html
@@ -115,6 +115,10 @@
             color: #bbb;
             transform: scale(1.1);
         }
+
+        footer p{
+            margin-top: 10px;
+        }
         
         @keyframes fadeIn {
             from { opacity: 0; }
@@ -430,16 +434,16 @@
                 <p class="font-bold mb-4">加入马上送你以下礼物:</p>
                 <ul class="list-none space-y-2 max-w-2xl mx-auto text-left">
                     <li class="bg-orange-100 p-3 rounded-xl border border-red-200" data-aos="fade-right">
-                        <span class="font-semibold text-[#a62025]"><i class="fas fa-gift mr-2"></i>价值 RM1266 创业礼包</span>
+                        <span class="font-semibold text-[#a62025] text-center block text-3xl"><i class="fas fa-gift mr-2"></i>价值 RM1266 创业礼包 <i class="fas fa-gift mr-2"></i></span>
                     </li>
                     <li class="bg-orange-100 p-3 rounded-xl border border-red-200" data-aos="fade-left">
-                        <span class="font-semibold text-[#a62025]"><i class="fas fa-book mr-2"></i>RM 999 的脸书广告营销课程</span>
+                        <span class="font-semibold text-[#a62025] text-center block text-3xl"><i class="fas fa-book mr-2"></i>RM 999 的脸书广告营销课程 <i class="fas fa-book mr-2"></i></span>
                     </li>
                     <li class="bg-orange-100 p-3 rounded-xl border border-red-200" data-aos="fade-right">
-                        <span class="font-semibold text-[#a62025]"><i class="fas fa-tools mr-2"></i>系统,培训,广告视频,图片,免费助理支援</span>
+                        <span class="font-semibold text-[#a62025] text-center block text-3xl"><i class="fas fa-tools mr-2"></i>系统,培训,广告视频,图片,免费助理支援 <i class="fas fa-tools mr-2"></i></span>
                     </li>
                     <li class="bg-orange-100 p-3 rounded-xl border border-red-200" data-aos="fade-left">
-                        <span class="font-semibold text-[#a62025]"><i class="fas fa-hand-holding-usd mr-2"></i>还有更多等你领取</span>
+                        <span class="font-semibold text-[#a62025] text-center block text-3xl"><i class="fas fa-hand-holding-usd mr-2"></i>还有更多等你领取 <i class="fas fa-hand-holding-usd mr-2"></i></span>
                     </li>
                 </ul>
             </div>
@@ -447,6 +451,9 @@
 
         
         <footer class="text-center text-gray-500 text-sm mt-12 pb-4" data-aos="fade-in">
+            <a href="https://wa.me/60122349929" class="inline-block bg-[#a62025] mb-6 text-white text-2xl md:text-3xl font-bold py-4 px-12 rounded-full shadow-lg hover:shadow-2xl transform transition-all duration-300">
+                <i class="fas fa-phone"></i> 欢迎联络我们
+            </a>
             <p>我们说到做到！！！我们每个星期六都有课程</p>
             <p>公司投资课程!聘请市场有价值的导师!</p>
         </footer>
