--- a/index.html
+++ b/index.html
@@ -321,9 +321,13 @@
                     在这个年代,要赚钱,你必须结合
                 </p>
                 <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="100">【很大的市场】</span>
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="300">【很有需求的产品】</span>
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="500">【符合现代人的商业模式】</span>
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="100">1.【很大的市场】</span>
+                </div>
+                    <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="300">2.【很有需求的产品】</span>
+                </div>
+                    <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="500">3.【符合现代人的商业模式】</span>
                 </div>
             </div>
 
@@ -373,7 +377,7 @@
             </div>
 
             <div class="bg-white rounded-3xl p-6 shadow-lg text-center mt-12" data-aos="fade-up">
-                <h3 class="font-bold text-2xl text-[#a62025] mb-4">4. 培训</h3>
+                <h3 class="font-bold text-2xl text-[#a62025] mb-4">培训</h3>
                 <p class="text-gray-700 mb-4 text-lg">每周六坚持培训，教你营销、广告、小红书运营！</p>
                 <div class="grid grid-cols-1 md:grid-cols-1 gap-0 mt-8">
                     <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
