--- a/index.html
+++ b/index.html
@@ -321,13 +321,13 @@
                     在这个年代,要赚钱,你必须结合
                 </p>
                 <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="100">1.【很大的市场】</span>
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="100">1. 市场</span>
                 </div>
                     <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="300">2.【很有需求的产品】</span>
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="300">2. 产品</span>
                 </div>
                     <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="500">3.【符合现代人的商业模式】</span>
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="500">3. 模式</span>
                 </div>
             </div>
 
