--- a/index.html
+++ b/index.html
@@ -321,34 +321,18 @@
                     在这个年代,要赚钱,你必须结合
                 </p>
                 <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="100">1. 市场</span>
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="100">1.【很大的市场】</span>
                 </div>
                     <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="300">2. 产品</span>
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="300">2.【很有需求的产品】</span>
                 </div>
                     <div class="flex items-center justify-center space-x-2 mt-6 flex-wrap">
-                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="500">3. 模式</span>
-                </div>
-            </div>
-
-            <div class="bg-white rounded-3xl p-6 shadow-lg text-center" data-aos="fade-up">
-                <h3 class="font-bold text-2xl text-[#a62025] mb-4">1. 产品</h3>
-                <p class="text-gray-700 mb-4 text-lg">严重被低估的产品,很多人以为自己不需要,当了解后,才明白自己一直都在钢线上行走着!!!</p>
-                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-8">
-                    <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://media2.fishtank.my/media/melody/assets/article/article-640x360-medium-box_21.png?ext=.png" alt="" class="shadow w-full">
-                    </div>
-                    <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="100" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/1_2.jpg" alt="" class="shadow w-full">
-                    </div>
-                    <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://i.ytimg.com/vi/CrqgFouVvUM/hqdefault.jpg" alt="" class="shadow w-full">
-                    </div>
+                    <span class="benefit-badge" data-aos="zoom-in" data-aos-delay="500">3.【符合现代人的商业模式】</span>
                 </div>
             </div>
 
             <div class="bg-white rounded-3xl p-6 shadow-lg text-center mt-12" data-aos="fade-up">
-                <h3 class="font-bold text-2xl text-[#a62025] mb-4">2. 市场空间很大</h3>
+                <h3 class="font-bold text-2xl text-[#a62025] mb-4">1. 市场空间很大</h3>
                 <p class="text-gray-700 mb-4 text-lg">市场占有率只有10%,还有90%还未开发</p>
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-8">
                     <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
@@ -359,6 +343,22 @@
                     </div>
                     <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
                         <img src="https://src-site.vercel.app/2_3.jpg" alt="" class="shadow w-full">
+                    </div>
+                </div>
+            </div>
+
+            <div class="bg-white rounded-3xl p-6 shadow-lg text-center mt-12" data-aos="fade-up">
+                <h3 class="font-bold text-2xl text-[#a62025] mb-4">2. 产品</h3>
+                <p class="text-gray-700 mb-4 text-lg">严重被低估的产品,很多人以为自己不需要,当了解后,才明白自己一直都在钢线上行走着!!!</p>
+                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-8">
+                    <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
+                        <img src="https://media2.fishtank.my/media/melody/assets/article/article-640x360-medium-box_21.png?ext=.png" alt="" class="shadow w-full">
+                    </div>
+                    <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="100" onclick="openModal(this.querySelector('img'))">
+                        <img src="https://src-site.vercel.app/1_2.jpg" alt="" class="shadow w-full">
+                    </div>
+                    <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
+                        <img src="https://i.ytimg.com/vi/CrqgFouVvUM/hqdefault.jpg" alt="" class="shadow w-full">
                     </div>
                 </div>
             </div>
