--- a/english/index.html
+++ b/english/index.html
@@ -336,10 +336,10 @@
                 <p class="text-gray-700 mb-4 text-lg">Market share is only 10%, with 90% still untapped.</p>
                 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-8">
                     <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/2_1.jpg" alt="Market statistic 1" class="shadow w-full">
+                        <img src="https://src-site.vercel.app/1e.jpg" alt="Market statistic 1" class="shadow w-full">
                     </div>
                     <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="100" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/2_2.jpg" alt="Market statistic 2" class="shadow w-full">
+                        <img src="https://src-site.vercel.app/1_2e.jpg" alt="Market statistic 2" class="shadow w-full">
                     </div>
                     <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
                         <img src="https://src-site.vercel.app/2_3.jpg" alt="Market statistic 3" class="shadow w-full">
