--- a/english/index.html
+++ b/english/index.html
@@ -342,7 +342,7 @@
                         <img src="https://src-site.vercel.app/1_2e.jpg" alt="Market statistic 2" class="shadow w-full">
                     </div>
                     <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/2_3.jpg" alt="Market statistic 3" class="shadow w-full">
+                        <img src="https://src-site.vercel.app/1_3e.jpg" alt="Market statistic 3" class="shadow w-full">
                     </div>
                 </div>
             </div>
@@ -350,15 +350,12 @@
             <div class="bg-white rounded-3xl p-6 shadow-lg text-center mt-12" data-aos="fade-up">
                 <h3 class="font-bold text-2xl text-[#a62025] mb-4">2. The Product</h3>
                 <p class="text-gray-700 mb-4 text-lg">A seriously underrated product. Many people think they don't need it, but after understanding it, they realize they've been walking a tightrope!!!</p>
-                <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 mt-8">
+                <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 mt-8">
                     <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://media2.fishtank.my/media/melody/assets/article/article-640x360-medium-box_21.png?ext=.png" alt="Product example 1" class="shadow w-full">
+                        <img src="https://src-site.vercel.app/2e.jpg" alt="Product example 1" class="shadow w-full">
                     </div>
                     <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="100" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/1_2.jpg" alt="Product example 2" class="shadow w-full">
-                    </div>
-                    <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://i.ytimg.com/vi/CrqgFouVvUM/hqdefault.jpg" alt="Product example 3" class="shadow w-full">
+                        <img src="https://src-site.vercel.app/2_2e.jpg" alt="Product example 2" class="shadow w-full">
                     </div>
                 </div>
             </div>
@@ -368,10 +365,10 @@
                 <p class="text-gray-700 mb-4 text-lg">This business model doesn't require you to sell!!!</p>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-8">
                     <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/3_1.png" alt="Business model 1" class="shadow w-full">
+                        <img src="https://src-site.vercel.app/3e.jpg" alt="Business model 1" class="shadow w-full">
                     </div>
                     <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="100" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/3_3.png" alt="Business model 2" class="shadow w-full">
+                        <img src="https://src-site.vercel.app/3_2.jpg" alt="Business model 2" class="shadow w-full">
                     </div>
                 </div>
             </div>
@@ -396,7 +393,7 @@
                         <br>Our <span class="font-bold text-[#a62025]">[assistants]</span> will help you follow up with these leads until they attend. As long as they attend and make a purchase, you will get a commission from our affiliate marketing program.
                     </p>
                     <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
-                        <img src="https://src-site.vercel.app/4.png" alt="Workflow diagram" class="w-full">
+                        <img src="https://src-site.vercel.app/4e.png" alt="Workflow diagram" class="w-full">
                     </div>
                 </div>
                 <div class="md:w-1/2">
@@ -420,7 +417,7 @@
                     <span class="text-4xl md:text-6xl font-extrabold text-[#a62025] count-up" data-count="9000">0</span>
                 </div>
                 <div class="img-hover-zoom" data-aos="flip-left" data-aos-delay="200" onclick="openModal(this.querySelector('img'))">
-                   <img src="https://src-site.vercel.app/5.png" alt="Income calculation example" class="w-full">
+                   <img src="https://src-site.vercel.app/5e.png" alt="Income calculation example" class="w-full">
                 </div>
             </div>
         </section>
