--- a/english/index.html
+++ b/english/index.html
@@ -312,7 +312,7 @@
                 </div>
                 
                 <p class="text-center text-xl font-medium mt-12 text-gray-700" data-aos="zoom-in">
-                    Now our <span class="font-bold text-green-600 gradient-text">[Business Model]</span> can solve your problems above and also bring you
+                    Now, our <span class="font-bold text-green-600 gradient-text">[Business Model]</span> can solve your problems above and also bring you
                     <br>
                     <span class="font-bold text-green-600 text-2xl md:text-3xl gradient-text">[PASSIVE INCOME]</span>
                 </p>
@@ -379,7 +379,7 @@
 
             <div class="bg-white rounded-3xl p-6 shadow-lg text-center mt-12" data-aos="fade-up">
                 <h3 class="font-bold text-2xl text-[#a62025] mb-4">Training</h3>
-                <p class="text-gray-700 mb-4 text-lg">We provide training every Saturday, teaching you marketing, advertising, and Xiaohongshu (Red Book) operations!</p>
+                <p class="text-gray-700 mb-4 text-lg">We provide training every Saturday, teaching you marketing, advertising, TikTok and Xiaohongshu (Red Book) operations!</p>
                 <div class="grid grid-cols-1 md:grid-cols-1 gap-0 mt-8">
                     <div class="img-hover-zoom" data-aos="flip-left" onclick="openModal(this.querySelector('img'))">
                         <img src="https://src-site.vercel.app/4_1.png" alt="Training session" class="shadow w-full">
